# ai-shifu

./: .dockerignore  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CodeSifu.graffle  INSTALL_MANUAL.md  LICENSE.txt  PROJECT_QUALITY_ROADMAP.md  README.md  README_ZH-CN.md  auth_config.yml  chapter.py  config.yml  config_manager.py  cz.json  docker-compose.yml  eslint.config.js  eslint.config.mjs  init.py  jsconfig.json  package.json  pnpm-lock.yaml  requirements.txt  run_in_docker.sh  script.py  tasks.md  test_commits_demo.txt
src/api/: .gitignore  1.env copy  Dockerfile  Dockerfile_prod  Dockerfile_test  Dockerfile_uat  app.py  build-and-push.sh  cn_demo.json  error_codes.json  langfuse_session_usage.csv  langfuse_session_usage３.csv  migration_rollback.py  migration_sync_flask.py  migration_sync_task.py  migration_sync_task_simple.py  pyproject.toml  pytest.ini  quick_sync_all.py  requirements.txt  run_migration_sync.py  test_fix_validation.py  unified_migration_task.py
src/api/demo_shifus/: cn_demo.json  cn_first_shifu.json  en_demo.json  en_first_shifu.json
src/api/deploy/: Jenkinsfile_prod  Jenkinsfile_uat
src/api/flaskr/: __init__.py
src/api/instance/: config.py  dev_config.py  dev_docker_config.py  prod_k8s_config.py  sifu_test_config.py
src/api/instance22/: config.py  uat_k8s_config.py
src/api/migrations/: alembic.ini  env.py
src/api/prompts/: ask.md  summary.md  view.md
src/api/scripts/: README.md  check_promo_campaign_migration.py  clean_sql.sql  export_langfuse_session_usage.py  generate_env_examples.py  test.py  tmp.sql  tts_test_report.py  update_course.py
src/api/tests/: __init__.py  common.py  conftest.py  run_script.py  test_active.py  test_admin.py  test_app.py  (+33 more)
(+2591 files in other folders)
