[tool.poetry]
name = "api"
version = "0.1.0"
description = "API service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "^2.4.3"
aiohttp = "^3.10.2"
alembic = "^1.13.2"
alibabacloud-dysmsapi20170525 = "^3.0.0"
alibabacloud-tea = "^0.3.9"
alibabacloud-credentials = "^0.3.4"
alibabacloud-endpoint-util = "^0.0.3"
alibabacloud-gateway-spi = "^0.0.1"
alibabacloud-openapi-util = "^0.2.2"
alibabacloud-tea-openapi = "^0.3.10"
alibabacloud-tea-util = "^0.3.13"
alibabacloud-tea-xml = "^0.0.2"
aliyun-python-sdk-core = "^2.15.1"
aliyun-python-sdk-kms = "^2.16.3"
annotated-types = "^0.7.0"
captcha = "^0.6.0"
Flask = "^3.0.3"
Flask-CLI = "^0.4.0"
Flask-Cors = "^4.0.2"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
flasgger = "^0.9.7.1"
gevent = "^24.10.3"
gmssl = "^3.2.2"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
httpx-sse = "^0.4.0"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-text-splitters = "^0.3.2"
langfuse = "^2.39.3"
openai = "^1.44.1"
openpyxl = "^3.1.5"
oss2 = "^2.18.6"
pandas = "^2.2.3"
pillow = "^10.4.0"
pingpp = "^2.7.2"
pycryptodome = "^3.20.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.6.1"
PyJWT = "^2.8.0"
PyMySQL = "^1.1.1"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
requests = "^2.32.3"
SQLAlchemy = "^2.0.31"
waitress = "^3.0.1"
watchdog = "^6.0.0"
XlsxWriter = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.poetry.scripts]
start = "flaskr.cli:start"
db-upgrade = "flaskr.cli:db_upgrade"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
